# libpyro

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
pyro/: __init__.py  model.py
tests/: test_model.py
