[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libpyro"
version = "0.0.1"
authors = [
  { name="Sachchit Kunichetty", email="skunich@umich.edu" },
]
description = "Training utilities for PyTorch"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/skunichetty/pyro"
Issues = "https://github.com/skunichetty/pyro/issues"
